[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "a3s-sentry"
version = "0.1.0"
description = "Native (PyO3) Python SDK for a3s-sentry — the in-process tiered (L1 rules / L2 LLM / L3 agent) security judge."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Repository = "https://github.com/A3S-Lab/Sentry"

[tool.maturin]
module-name = "a3s_sentry"
features = ["pyo3/extension-module"]
