[package]
name = "a3s-sentry-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native (napi) Node binding for a3s-sentry's in-process judge."

[lib]
crate-type = ["cdylib"]

[dependencies]
a3s-sentry = { path = "../.." }
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
